--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,16 @@ billiard==3.6.4.0
 bs4==0.0.1
 celery==5.2.7
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cryptography==38.0.4
 dnspython==2.2.1
+ecdsa==0.18.0
+email-validator==1.3.0
 et-xmlfile==1.1.0
 eventlet==0.33.2
 fastapi==0.88.0
@@ -19,7 +23,6 @@ greenlet==2.0.1
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
-InstagramCLI==1.0.19
 Jinja2==3.1.2
 jsonify==0.5
 kombu==5.2.4
@@ -27,15 +30,20 @@ MarkupSafe==2.1.1
 numpy==1.24.0
 openpyxl==3.0.10
 pandas==1.5.2
+passlib==1.7.4
 prompt-toolkit==3.0.36
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.10.2
 python-dateutil==2.8.2
 python-dotenv==0.21.0
+python-jose==3.3.0
 python-multipart==0.0.5
 pytz==2022.7
 PyYAML==6.0
 redis==4.4.0
 requests==2.28.1
+rsa==4.9
 scrapingbee==1.1.8
 six==1.16.0
 sniffio==1.3.0
